Q2/k8s/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: web

spec:

 replicas: 3

 selector:

  matchLabels:

   app: web

 template:

  metadata:

   labels:

    app: web

  spec:

   containers:

   - name: web

     image: nginx

     ports:

     - containerPort: 80
