Q2/k8s/mysql-statefulset.yaml
apiVersion: apps/v1

kind: StatefulSet

metadata:
  name: mysql

spec:

 serviceName: mysql

 replicas: 1

 selector:

  matchLabels:

   app: mysql

 template:

  metadata:

   labels:

    app: mysql

  spec:

   containers:

   - name: mysql

     image: mysql:8

     volumeMounts:

     - mountPath: /var/lib/mysql

       name: mysql-data

 volumeClaimTemplates:

 - metadata:

     name: mysql-data

   spec:

     accessModes:

     - ReadWriteOnce

     resources:

       requests:

         storage: 20Gi
