Q2/k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
 name: web

spec:

 type: ClusterIP

 selector:

   app: web

 ports:

 - port: 80
