Q2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

 name: web

 annotations:

   kubernetes.io/ingress.class: alb

spec:

 rules:

 - host: asiayo.com

   http:

     paths:

     - path: /

       pathType: Prefix

       backend:

         service:

           name: web

           port:

             number: 80
